whisply-rs/tui/src/chatwidget/snapshots/whisply_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Update Model Permissions

› 1. Ask for approval  Whisply can read and edit files in the current
                       workspace, and run commands. Approval is required to
                       access the internet or edit other files.
  2. Full Access       Whisply can edit files outside this workspace and
                       access the internet without asking for approval.
                       Exercise caution when using.

  Press enter to confirm or esc to go back
